--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -54,5 +54,16 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
-password.do.not.match.confirmPassword=Password and confirmPassword are not matched
 
+password.do.not.match.confirmPassword=Password and confirmPassword are not matched
+co.RegisterCO.firstName.nullable=First Name can not be null
+co.RegisterCO.lastName.nullable=Last Name can not be null
+co.RegisterCO.username.nullable=User Name can not be null
+co.RegisterCO.password.nullable=Password can not be null
+co.RegisterCO.firstName.blank=First Name can not be blank
+co.RegisterCO.lastName.blank=Last Name can not be blank
+co.RegisterCO.email.email.invalid=Email should be of "abcd@gmail.com
+ com.ttnd.linksharing.LinkResource.discription.nullable=description can not be null
+ com.ttnd.linksharing.DocumentResource.discription.nullable=description can not be null
+ com.ttnd.linksharing.LinkResource.url.nullable=Url can not be null
+ com.ttnd.linksharing.LinkResource.URL=Url can not be null
