--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -67,3 +67,9 @@ co.RegisterCO.email.email.invalid=Email should be of "abcd@gmail.com
  com.ttnd.linksharing.DocumentResource.discription.nullable=description can not be null
  com.ttnd.linksharing.LinkResource.url.nullable=Url can not be null
  com.ttnd.linksharing.LinkResource.URL=Url can not be null
+
+com.ttnd.linksharing.User.firstName.nullable=First Name can not be null
+com.ttnd.linksharing.User.lasttName.nullable=Last Name can not be null
+com.ttnd.linksharing.User.username.nullable=User Name can not be null
+com.ttnd.linksharing.User.password.nullable=password can not be null
+com.tthn.linksharing.User.firstName.blank=First Name can not be null
